Added first database management. - Updated some components

--- a/App/Tscrump App/Tscrump App/Tscrump_App.UWP/Tscrump_App.UWP.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App.UWP/Tscrump_App.UWP.csproj
@@ -96,6 +96,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DatabaseManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -132,6 +133,14 @@
       <Project>{2e9ab8ec-6f33-4d8c-8fca-55818bcfdd52}</Project>
       <Name>Tscrump_App</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="MySql.Data.RT">
+      <HintPath>..\..\packages\mysql-connector-net-6.7.9-noinstall\RT\MySql.Data.RT.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
