--- a/App/.gitignore
+++ b/App/.gitignore
@@ -161,6 +161,7 @@ PublishScripts/
 **/packages/*
 # except build/, which is used as an MSBuild target.
 !**/packages/build/
+!**/packages/mysql-connector-net-6.7.9-noinstall
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/packages/repositories.config
 # NuGet v3's project.json files produces more ignoreable files
