--- a/App/Tscrump App/Tscrump App/Tscrump_App.UWP/project.json
+++ b/App/Tscrump App/Tscrump App/Tscrump_App.UWP/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "OxyPlot.Windows": "1.0.0",
     "Xamarin.Forms": "2.3.3.166-pre4"
   },
   "frameworks": {
