Removed webview chart and started on custom Oxyplot solution

--- a/App/Tscrump App/Tscrump App/Tscrump_App.UWP/Tscrump_App.UWP.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App.UWP/Tscrump_App.UWP.csproj
@@ -97,6 +97,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="DatabaseManager.cs" />
+    <Compile Include="FormsPlotViewRenderer.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
