--- a/App/Tscrump App/Tscrump App/Tscrump_App/Tscrump_App.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App/Tscrump_App.csproj
@@ -40,9 +40,7 @@
     </Compile>
     <Compile Include="DatabaseManager.cs" />
     <Compile Include="Extentions.cs" />
-    <Compile Include="FormsPlotView.xaml.cs">
-      <DependentUpon>FormsPlotView.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="FormsPlotView.cs" />
     <Compile Include="IDatabaseManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -83,12 +81,6 @@
       <HintPath>..\..\packages\Xamarin.Forms.2.3.3.166-pre4\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Xaml.dll</HintPath>
       <Private>True</Private>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="FormsPlotView.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.3.166-pre4\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.3.166-pre4\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
