--- a/App/.gitignore
+++ b/App/.gitignore
@@ -162,6 +162,7 @@ PublishScripts/
 # except build/, which is used as an MSBuild target.
 !**/packages/build/
 !**/packages/mysql-connector-net-6.7.9-noinstall
+!**/Packages/SyncFusion
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/packages/repositories.config
 # NuGet v3's project.json files produces more ignoreable files
