--- a/App/Tscrump App/Tscrump App/Tscrump_App.Droid/Tscrump_App.Droid.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App.Droid/Tscrump_App.Droid.csproj
@@ -54,6 +54,15 @@
     </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
+    <Reference Include="Syncfusion.SfChart.Android">
+      <HintPath>..\..\packages\Syncfusion\Android\Syncfusion.SfChart.Android.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.SfChart.XForms">
+      <HintPath>..\..\packages\Syncfusion\Android\Syncfusion.SfChart.XForms.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.SfChart.XForms.Android">
+      <HintPath>..\..\packages\Syncfusion\Android\Syncfusion.SfChart.XForms.Android.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ObjectModel" />
