--- a/App/Tscrump App/Tscrump App/Tscrump_App/Tscrump_App.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App/Tscrump_App.csproj
@@ -64,6 +64,9 @@
     <Reference Include="MySql.Data.RT">
       <HintPath>..\..\packages\mysql-connector-net-6.7.9-noinstall\RT\MySql.Data.RT.dll</HintPath>
     </Reference>
+    <Reference Include="Syncfusion.SfChart.XForms">
+      <HintPath>..\..\packages\Syncfusion\Plc\Syncfusion.SfChart.XForms.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.3.3.166-pre4\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Core.dll</HintPath>
       <Private>True</Private>
