--- a/App/Tscrump App/Tscrump App/Tscrump_App.UWP/Tscrump_App.UWP.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App.UWP/Tscrump_App.UWP.csproj
@@ -224,7 +224,11 @@
       <HintPath>..\..\packages\Syncfusion\Uwp\Syncfusion.SfChart.XForms.UWP.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <SDKReference Include="WindowsMobile, Version=10.0.14393.0">
+      <Name>Windows Mobile Extensions for the UWP</Name>
+    </SDKReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
