Started on adding advanced chart controlls

--- a/App/Tscrump App/Tscrump App/Tscrump_App/Tscrump_App.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App/Tscrump_App.csproj
@@ -38,6 +38,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ChartLineOptionsPage.xaml.cs">
+      <DependentUpon>ChartLineOptionsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ChartPage.xaml.cs">
       <DependentUpon>ChartPage.xaml</DependentUpon>
     </Compile>
@@ -93,6 +96,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ChartPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ChartLineOptionsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
