More work on advanced options for chart. Database connects to the server now.

--- a/App/Tscrump App/Tscrump App/Tscrump_App/Tscrump_App.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App/Tscrump_App.csproj
@@ -38,18 +38,20 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ChartLineOptionsPage.xaml.cs">
-      <DependentUpon>ChartLineOptionsPage.xaml</DependentUpon>
+    <Compile Include="ChartOptionsPage.xaml.cs">
+      <DependentUpon>ChartOptionsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ChartPage.xaml.cs">
       <DependentUpon>ChartPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="DatabaseManager.cs" />
     <Compile Include="Extentions.cs" />
+    <Compile Include="ICultureProvider.cs" />
     <Compile Include="IDatabaseManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NumericEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -101,7 +103,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ChartLineOptionsPage.xaml">
+    <EmbeddedResource Include="ChartOptionsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
