--- a/App/Tscrump App/Tscrump App/Tscrump_App.UWP/Tscrump_App.UWP.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App.UWP/Tscrump_App.UWP.csproj
@@ -96,6 +96,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CultureProvider.cs" />
     <Compile Include="DatabaseManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
