--- a/App/Tscrump App/Tscrump App/Tscrump_App.Droid/Tscrump_App.Droid.csproj
+++ b/App/Tscrump App/Tscrump App/Tscrump_App.Droid/Tscrump_App.Droid.csproj
@@ -44,6 +44,7 @@
     <EnableLLVM>False</EnableLLVM>
     <AndroidEnableMultiDex>False</AndroidEnableMultiDex>
     <EnableProguard>False</EnableProguard>
+    <MandroidI18n>West</MandroidI18n>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
