--- a/ServerSide_App/TheThingNetwork/pom.xml
+++ b/ServerSide_App/TheThingNetwork/pom.xml
@@ -8,11 +8,21 @@
     <artifactId>TheThingNetwork</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.thethingsnetwork/data-mqtt -->
         <dependency>
             <groupId>org.thethingsnetwork</groupId>
-            <artifactId>java-app-lib</artifactId>
-            <version>1.0.0</version>
+            <artifactId>data-mqtt</artifactId>
+            <version>2.0.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3 -->
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
